--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -16,9 +16,26 @@
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 </head>
     <body>
-        <div class="row body-row">
-            <div class="col-sm-4">.</div>
-            <div class="col-sm-4 wrapper">
+        <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="menu-button navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span> 
+            </button>
+            <a class="navbar-brand" href="index.html#project">Back</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="https://en.wikipedia.org/wiki/Tic-tac-toe">WIKI</a></li>
+              <li><a href="https://github.com/bangpham/Tic-Tac-Toe">GITHUB</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </nav>
+            <div class="wrapper">
                 <div class="gameboard">
                     <div value="1" class="box"></div>
                     <div value="2" class="box"></div>
@@ -31,12 +48,8 @@
                     <div value="256" class="box"></div>
                 </div>
                 <div class="statusboard">
-                    <button class="start">Start</button>
-                    <span class="status"></span>
-                </div>
-            </div>
-            <div class="col-sm-4">.</div>
-        </div>
+                <button class="start">Start</button><span class="status">Start</span>              
+            <div/>
 
      <script type="text/javascript" src="js/gamescript.js"></script>
     </script>
